# sratim

./: .build_version  .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  build.rs  build.zig  build.zig.zon  config.toml  deploy.sh  install.sh  libraries.json  metadata.db  patch.js  repro_lookup.sh  sample_template.xml  scan_shows.zig  scratch.rs  sratim.service  sync.sh  sync_de1.sh  tmdb_response.json  users.json
.github/workflows/: build.yml  rust.yml
frontend/: add-library.html  app.js  index.html  login.html  player.html  player.js  profile.html  style.css  tv.css  tv.js  tv_login.html  users.html  users.js
public/shaka/: controls.css  shaka-player.ui.js
scratch/: test_regex.rs
src/: assets.rs  auth.rs  c.zig  catalog.html  catalog.zig  config.rs  config.zig  db.rs  db.zig  ffprobe.zig  handlers.rs  html.zig  indexer.zig  lib.rs  library.zig  library_view.html  logger.rs  login.html  main.rs  main.zig  manifest.zig  manifest_tests.zig  metadata.rs  models.rs  packager.zig  player.html  player.zig  root.zig  scanner.rs  server.zig  session.zig  state.rs  streamer.zig  style.css  template.zig  transcode.rs  transcoder.zig  users.zig  watcher.zig
src/core/: c.zig  html.zig  minify.zig
src/db/: admin.zig  db.zig  library.zig  logging.zig  metadata.zig  session.zig  unmatched.zig  users.zig
src/media/: fetcher.zig  streamer.zig  tmdb.zig  transcoder.zig
src/routes/: library.rs  mod.rs  ui.rs  video.rs
src/streaming/: mod.rs  process.rs
src/web/: catalog.zig  server.zig  (+1 more)
templates/: index.html  player.html  tv_index.html  tv_player.html
(+26 files in other folders)
