[package]
name = "sratim"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"
walkdir = "2"
uuid = { version = "1.0", features = ["v4"] }

anyhow = "1.0.100"
async-stream = "0.3.6"
toml = "0.8"
tower = "0.5.3"
scopeguard = "1.2.0"
libc = "0.2.180"
bytes = "1.11.0"
tokio-util = "0.7.18"
futures-core = "0.3.31"
percent-encoding = "2.3.2"

